# OmiibaConnect-AndroidTV

./: .gitignore  LICENSE  NOTICE.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: android-tv.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/omiiba/connect/tv/: ConnectStatusStore.kt  CrashReporter.kt  HeadphonesRepository.kt  MainActivity.kt  MainBrowseFragment.kt  OmiibaTvApplication.kt  RfcommSpikeActivity.kt  TvDiagnosticsActivity.kt
app/src/main/java/dev/omiiba/connect/tv/bluetooth/: BluetoothAccess.kt  BluetoothRfcommTransport.kt  ConnectErrorMessages.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  tv_banner.xml
app/src/main/res/drawable-xhdpi/: tv_banner.xml
app/src/main/res/layout/: activity_tv.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
core-native/: build.gradle.kts
core-native/src/main/cpp/: AndroidBluetoothConnector.cpp  AndroidBluetoothConnector.h  BluetoothWrapper.cpp  BluetoothWrapper.h  ByteMagic.cpp  CMakeLists.txt  CommandSerializer.cpp  CommandSerializer.h  Constants.h  DeviceProfile.h  DeviceStatus.h  Headphones.cpp  Headphones.h  IBluetoothConnector.h  ProtocolParser.cpp  ProtocolParser.h  omiiba_jni.cpp
docs/: RELEASE.md  android-tv-bluetooth.md  android-tv-launch.md  android-tv-sony-apk.md  regression-checklist-android-tv.md
scripts/: adb-tv-diagnose.sh  sync-protocol-from-mac.sh
(+3 files in other folders)
